--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@emotion/react": "^11.5.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.5",
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
     "@mui/styles": "^5.0.2",
     "chart.js": "^3.5.1",
     "date-fns": "^2.25.0",
+    "expo-constants": "^13.0.2",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "next": "^12.0.3-canary.7",
@@ -31,12 +33,21 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-native-circular-progress": "^1.3.7",
+    "react-native-circular-progress-indicator": "^2.0.6",
+    "react-native-paper": "3.6.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-svg": "^12.1.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "reanimated-bottom-sheet": "1.0.0-alpha.20",
     "uuid": "^8.3.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "eslint": "^7.32.0",
-    "eslint-config-next": "12.0.3-canary.7"
+    "eslint-config-next": "12.0.3-canary.7",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^2.2.19"
   }
 }
